wip/fixed-user-name-align-navbar-bottom-v1

--- a/src/Components/MyProfile/MyProfile.css
+++ b/src/Components/MyProfile/MyProfile.css
@@ -402,7 +402,6 @@
    .bottom-nav .profile-settings .profile-info-row .profile-info-col img { 
       width: 30px;
       height: 30px;
-      margin-right: 5px;
     }
     .modal-content-status li:last-child {
       margin-top: 16px;
